--- a/css/landingPage.css
+++ b/css/landingPage.css
@@ -27,6 +27,22 @@
         font-size: 3.0vw;
     }
 
+    .navbar-collapse.collapse {
+        display: block!important;
+    }
+
+    .navbar-nav>li,
+    .navbar-nav {
+        float: left !important;
+    }
+
+    .navbar-nav.navbar-right:last-child {
+        margin-right: -15px !important;
+    }
+
+    .navbar-right {
+        float: right!important;
+    }
     .customnavbarnav {
         width: 100%;
         text-align: center;
@@ -35,9 +51,16 @@
     .customlist {
         width: 33.33333333333333%
     }
-    #chickens {
+
+    #payPal {
+        float: none;
         background-color: red;
-        height: 320px;
+        width: 98%;
+    }
+
+    img {
+        float: left;
+        width: 20%;
     }
 }
 
@@ -65,6 +88,23 @@
         font-size: 3.0vw;
     }
 
+    .navbar-collapse.collapse {
+        display: block!important;
+    }
+
+    .navbar-nav>li,
+    .navbar-nav {
+        float: left !important;
+    }
+
+    .navbar-nav.navbar-right:last-child {
+        margin-right: -15px !important;
+    }
+
+    .navbar-right {
+        float: right!important;
+    }
+
     .customnavbarnav {
         width: 100%;
         text-align: center;
@@ -73,9 +113,16 @@
     .customlist {
         width: 33.33333333333333%
     }
-    #chickens {
+
+    #payPal {
+        float: none;
         background-color: red;
-        height: 375px;
+        width: 98%;
+    }
+
+    img {
+        float: left;
+        width: 20%;
     }
 }
 
@@ -102,6 +149,24 @@
         font-size: 3.0vw;
     }
 
+    .navbar-collapse.collapse {
+        display: block!important;
+    }
+
+    .navbar-nav>li,
+    .navbar-nav {
+        float: left !important;
+    }
+
+    .navbar-nav.navbar-right:last-child {
+        margin-right: -15px !important;
+    }
+
+    .navbar-right {
+        float: right!important;
+    }
+
+
     .customnavbarnav {
         width: 100%;
         text-align: center;
@@ -110,9 +175,16 @@
     .customlist {
         width: 33.33333333333333%
     }
-    #chickens {
+
+    #payPal {
+        float: none;
         background-color: red;
-        height: 414px;
+        width: 98%;
+    }
+
+    img {
+        float: left;
+        width: 20%;
     }
 }
 
@@ -139,6 +211,24 @@
         font-size: 3.0vw;
     }
 
+    .navbar-collapse.collapse {
+        display: block!important;
+    }
+
+    .navbar-nav>li,
+    .navbar-nav {
+        float: left !important;
+    }
+
+    .navbar-nav.navbar-right:last-child {
+        margin-right: -15px !important;
+    }
+
+    .navbar-right {
+        float: right!important;
+    }
+
+
     .customnavbarnav {
         width: 100%;
         text-align: center;
@@ -147,9 +237,16 @@
     .customlist {
         width: 33.33333333333333%
     }
-    #chickens {
+
+    #payPal {
+        float: none;
         background-color: red;
-        height: 375px;
+        width: 98%;
+    }
+
+    img {
+        float: left;
+        width: 20%;
     }
 }
 
@@ -171,26 +268,39 @@
         background-position: center;
         height: 600px;
     }
-    #chickens {
+
+
+    img {
+        margin-right: 5px;
+        float: left;
+        width: 25%;
+    }
+
+    #payPal {
+        float: none;
         background-color: red;
-        height: 500px;
+        width: 98%;
     }
+    
+}
 
-    #title {
+#title {
 
 
-        color: white;
-        font-family: 'Alegreya', serif;
-        font-size: 35px;
-        font-size: 3.0vw;
-    }
+    color: white;
+    font-family: 'Alegreya', serif;
+    font-size: 35px;
+    font-size: 3.0vw;
+}
 
-    .customnavbarnav {
-        width: 100%;
-        text-align: center;
-    }
+.customnavbarnav {
+    width: 100%;
+    text-align: center;
+}
 
-    .customlist {
-        width: 33.33333333333333%
-    }
+.customlist {
+    width: 33.33333333333333%
+}
+
+
 }
